# TaskMG

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPEC.md  pyproject.toml
src/taskmg/: __init__.py  api.py  cli.py  repo.py
src/taskmg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: tn1.py  tn2.py
